style.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&family=Roboto:wght@100&display=swap');

*{
    box-sizing: border-box;
    margin:0;
    padding: 0;
    font-family:'Oswald', sans-serif;
}
body{
    line-height: 1.5;
}

ul{
    list-style: none;
}

.container{
    max-width: 1100px;
    margin: 0 auto;
    padding: 0 30px;
}

.navbar{
    background-color:#f9faf8;
    height:auto;
}

.logo{
    font-size: 24px;
    color: #1f2937;
}

.navbar a {
    color: #1f2937;
    font-size: 18px;
    text-decoration: none;
    font-weight:800;
}

.navbar a:hover{
    color:rgb(13, 127, 172);
    text-decoration: underline;
}

.navbar .container{
    max-width: 1800px;
    display: flex;
    justify-content: space-between;
    align-items:center;
    padding-top: 20px;
    padding-bottom: 20px;
}

.navbar ul{
    display: flex;
}

.navbar ul li{
    margin-left: 40px;
}

.header img{
    width: 100%;
    height: 350px;
    margin: 50px 50px;
    border-style: solid;
    border: double silver 10px;
    
}
.header{
    background-color: #1f2937;
    color: #e5e7eb;
    font-size: 18px;
    font-weight:bold;
}

.header .button{
    background-color: #3882f6;
    border:none;
    color:#fff;
    padding: 5px 10px;
    margin-top: 5px;
    text-decoration: none;
    display: inline-block;
    font-size: 15px;
    letter-spacing: 1.5px;
    border-radius: 80px;
    transition-duration: 0.4s;
}

.header .button:hover{
    background:url(https://64.media.tumblr.com/0bcfa270842ab9a281f0225c124ea0a9/tumblr_mz6m6svM5k1qii3jvo1_250.gifv);
    background-position: center;
    background-repeat: no-repeat;
    color: #fff;
}

h1{
    color: #f9faf8;
    font-size: 48px;
    letter-spacing: 7px;
    line-height: 1.5;
    margin: 10px 10px;
}

.header .container{
    display: flex;
    gap: 100px;
    justify-content:space-evenly;
    align-items: center;
}

.boxes{
    min-height: 400px;
}

h2{
    display: block;
    text-align: center;
    font-size: 36px;
    color: #1f2937;
    padding: 40px;
}

.box img{
    width: 350px;
    height: 350px;
    border-radius: 15px;
    border: solid #3882f6;
    box-shadow: 5px 5px 5px #1f2937;
    transition: all .6s ease-in-out;
}

.box img:hover{
    transition: ease 0.7s;
    transform: scale(1.1);
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
}

.box:hover{
    color: #3882f6;
}

.boxSection{
    display: flex; 
}

.box{
    color: #1f293700;
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    transition: ease-in .5s;
}

.box p{
    padding-top: 50px;
}

.quote{
    min-height: 300px;
    background-color: #e5e7eb;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.quote .quote-main{
    font-size: 36px;
    font-style: italic;
    font-weight: bold
}

.quote .quote-author{
    font-weight: bold;
    font-style: normal;
    text-align: right;
    letter-spacing: 1.5px;
}
.quote .quote-author::before{
    content: "\2014";
}

.actionCall{
    display: flex;
    align-items: center;
    justify-content: space-around;
    background-color: #3882f6;
    border: solid 2px #1f2937;
    border-radius: 10px;
    box-shadow: 2px 2px 2px #1f2937;
    color: #f9faf8;
    margin: 80px auto 80px auto;
    width: 1000px;
    height: 160px;
}

h4{
    font-size: large;
    font-weight: bold;
    letter-spacing: 1.2px;
}

.buttonAction{
    background-color: #3882f6;
    color: #f9faf8;
    padding: 5px 40px;
    border:solid 2px #f9faf8;
    font-size: 15px;
    border-radius: 20px;
    transition-duration: 0.4s;
    cursor: pointer;
}

.buttonAction:hover{
    background-color: #2965c5;
    color: #f9faf8;
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
}

.footer{
    display: flex;
    padding: 30px 50px;
    background-color: #1f2937;
    color: #f9faf8;
    letter-spacing: 2.5px;
}

@media(max-width: 768px){
    .navbar .container{
        flex-direction: column;
        text-align: center;
    }

    .header .container{
        flex-direction: column;
        text-align: center;
    }

    .boxes .boxSection{
        flex-direction: column;
        text-align: center;
    }

    .actionCall{
        flex-direction: column;
        text-align: center;
        width: auto;
    }
}

